css/VideoPlayer.css
/* ... */
.fl-videoPlayer-transcripts-button-on:focus {
    background-image: url('../images/white/transcript_on.png');
}
.fl-theme-uio-yb .fl-videoPlayer-transcripts-button-on:focus,
.fl-theme-uio-wb .fl-videoPlayer-transcripts-button-on:focus { background-image: url('../images/black/transcript_on.png'); }
.fl-theme-uio-by .fl-videoPlayer-transcripts-button-on:focus { background-image: url('../images/yellow/transcript_on.png'); }
.fl-theme-uio-bw .fl-videoPlayer-transcripts-button-on:focus { background-image: url('../images/white/transcript_on.png'); }


/******************
 * Volume Control *
 ******************/
 
.fl-videoPlayer-volumeContainer {
    position: relative;
}

.fl-videoPlayer-volumeControl {
    display: none;
    z-index: 1000;
    border-width: 5px 11px;
    border-style: solid;
    border-color: #c2c2c2;
    position: absolute;
    bottom: 1.8em;
    left: 20%;
    width: 25%;
    height: 6em;
    background: none;
    background-color: #F2F2F2;
}
.fl-videoPlayer-volumeContainer:focus .fl-videoPlayer-volumeControl {
    border-color: #3195C7;
}
.fl-videoPlayer-volumeContainer:focus .fl-videoPlayer-mute {
    background-color: #3195C7;
    background-image: url('../images/white/volume.png');
}
.fl-theme-uio-yb .fl-videoPlayer-volumeContainer:focus .fl-videoPlayer-mute {
    background-color: #FFFF00 !important;
    background-image: url('../images/black/volume.png');
}
.fl-theme-uio-wb .fl-videoPlayer-volumeContainer:focus .fl-videoPlayer-mute {
    background-color: #FFFFFF !important;
    background-image: url('../images/black/volume.png');
}
.fl-theme-uio-by .fl-videoPlayer-volumeContainer:focus .fl-videoPlayer-mute {
    background-color: #000000 !important;
    background-image: url('../images/yellow/volume.png');
}
.fl-theme-uio-bw .fl-videoPlayer-volumeContainer:focus .fl-videoPlayer-mute {
    background-color: #000000 !important;
    background-image: url('../images/white/volume.png');
}

.fl-videoPlayer-volumeContainer:focus .fl-videoPlayer-muted {
    background-color: #3195C7;
    background-image: url('../images/white/volume_off.png');
}
.fl-theme-uio-yb .fl-videoPlayer-volumeContainer:focus .fl-videoPlayer-muted {
    background-color: #FFFF00 !important;
    background-image: url('../images/black/volume_off.png');
}
.fl-theme-uio-wb .fl-videoPlayer-volumeContainer:focus .fl-videoPlayer-muted {
    background-color: #FFFFFF !important;
    background-image: url('../images/black/volume_off.png');
}
.fl-theme-uio-by .fl-videoPlayer-volumeContainer:focus .fl-videoPlayer-muted {
    background-color: #000000 !important;
    background-image: url('../images/yellow/volume_off.png');
}
.fl-theme-uio-bw .fl-videoPlayer-volumeContainer:focus .fl-videoPlayer-muted {
    background-color: #000000 !important;
    background-image: url('../images/white/volume_off.png');
}

.fl-videoPlayer-volumeControl.ui-corner-all {
    border-radius: 0px 0px 0px 0px;
}
.fl-videoPlayer-volumeControl .ui-slider-handle {
    height: 10%;
    left: -75%;
    margin-bottom: 0;
}

.fl-videoPlayer-volumeContainer:hover .fl-videoPlayer-volumeControl,
.fl-videoPlayer-volumeContainer:focus .fl-videoPlayer-volumeControl {
    display: inline;
}

/**********************************
 * Captions and Transcripts Menus *
 **********************************/
 
.fl-videoPlayer-languageMenu {
    position: absolute;
    bottom: 2.5em;
    padding: 0;
    width: 10em;
    font-size: 0.8em;
    background: #f2f2f2;
    z-index: 2;
}

/* TODO: This is a temporary workaround to an absolute positioning issue with the menu buttons */
.fl-videoPlayer-captions .fl-videoPlayer-languageMenu {
    margin-left: -3.5em;
}

.fl-videoPlayer-transcript .fl-videoPlayer-languageMenu {
    margin-left: -1em;
}

.fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem {
    display: block;
    background: #fff;
    width: 81%;
    padding: 5% 5% 5% 10%;
    margin: 2% 0 0% 2%;
}

.fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem:hover {
    background-color: #ffcc00;
}
.fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-selected,
.fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-active.fl-videoPlayer-menuItem-selected {
    color: #FFFFFF;
    background-color: #3195C7;
}
.fl-theme-uio-yb .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-selected,
.fl-theme-uio-yb .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-active.fl-videoPlayer-menuItem-selected {
    color: #000000 !important;
    background-color: #FFFF00 !important;
}
.fl-theme-uio-wb .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-selected,
.fl-theme-uio-wb .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-active.fl-videoPlayer-menuItem-selected {
    color: #000000 !important;
    background-color: #FFFFFF !important;
}
.fl-theme-uio-by .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-selected,
.fl-theme-uio-by .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-active.fl-videoPlayer-menuItem-selected {
    color: #FFFF00 !important;
    background-color: #000000 !important;
}
.fl-theme-uio-bw .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-selected,
.fl-theme-uio-bw .fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-active.fl-videoPlayer-menuItem-selected {
    color: #FFFFFF !important;
    background-color: #000000 !important;
}

.fl-videoPlayer-languageMenu .fl-videoPlayer-menuItem-active {
    background: #fff;
    font-weight: bold;
}

ul.fl-videoPlayer-captions-languageList,
ul.fl-videoPlayer-captions-languageList li,
ul.fl-videoPlayer-transcripts-languageList,
ul.fl-videoPlayer-transcripts-languageList li {
    display: block;
}

/*********************
 * Buffered Progress *
 *********************/

.fl-videoPlayer-buffered-progress {
    height: 1em;
    left: 0;
    top: 1px;
    position: absolute;
    width: 100%;
    pointer-events:none;
}

/* progress bar */
.fl-progress-popUp {
    display: none;
    text-align: center;
    color: black;
    margin: 0px auto;
    width: 100%;
    height: 100%;
}
/* ... */

